--- a/debian/control
+++ b/debian/control
@@ -29,23 +29,23 @@ Build-Depends: cdbs, debhelper (>= 10),
                libglib2.0-dev (>= 2.44.0),
                libgnome-desktop-3-dev (>= 3.21.2),
                libgnomekbd-dev (>= 2.91.91),
-               libgnome-bluetooth-dev (>= 3.18.0) [linux-any],
+               libgnome-bluetooth-dev (>= 3.18.0),
                libibus-1.0-dev (>= 1.5.2),
                libgoa-1.0-dev (>= 3.21.5),
                libgrilo-0.3-dev (>= 0.3.0),
                libgtk-3-dev (>= 3.22.0),
                libgtop2-dev,
-               libgudev-1.0-dev [linux-any],
+               libgudev-1.0-dev,
                libkrb5-dev,
-               libnm-dev (>= 1.2.0) [linux-any],
-               libnma-dev (>= 1.2.0) [linux-any],
-               libmm-glib-dev [linux-any],
+               libnm-dev (>= 1.2.0),
+               libnma-dev (>= 1.2.0),
+               libmm-glib-dev,
                libpolkit-gobject-1-dev (>= 0.103),
                libpulse-dev,
                libpwquality-dev,
                libsmbclient-dev (>= 2:3.6.12-1~),
                libupower-glib-dev (>= 0.99.0),
-               libwacom-dev (>= 0.7) [linux-any],
+               libwacom-dev (>= 0.7),
                libxi-dev (>= 2:1.2),
                libx11-dev,
                libxft-dev (>= 2.1.2),
