--- a/debian/control.in
+++ b/debian/control.in
@@ -4,14 +4,14 @@ Priority: optional
 Maintainer: BlankOn Developers <blankon-dev@googlegroups.com>
 XSBC-Original-Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: @GNOME_TEAM@
-Standards-Version: 3.9.8
-Build-Depends: cdbs, debhelper (>= 10),
+Standards-Version: 4.1.0
+Build-Depends: debhelper (>= 10),
                dpkg-dev (>= 1.16.1~),
                libaccountsservice-dev (>= 0.6.39),
                desktop-file-utils,
                gnome-common,
                gnome-pkg-tools (>= 0.10),
-               gnome-settings-daemon-dev (>= 3.19.1),
+               gnome-settings-daemon-dev (>= 3.23.90),
                gsettings-desktop-schemas-dev (>= 3.21.4),
                gtk-doc-tools,
                intltool (>= 0.37.1),
@@ -22,26 +22,26 @@ Build-Depends: cdbs, debhelper (>= 10),
                libcups2-dev,
                libgdk-pixbuf2.0-dev (>= 2.23.0),
                libgirepository1.0-dev,
-               libglib2.0-dev (>= 2.44.0),
+               libglib2.0-dev (>= 2.53.0),
                libgnome-desktop-3-dev (>= 3.21.2),
                libgnomekbd-dev (>= 2.91.91),
-               libgnome-bluetooth-dev (>= 3.18.0),
+               libgnome-bluetooth-dev (>= 3.18.0) ,
                libibus-1.0-dev (>= 1.5.2),
                libgoa-1.0-dev (>= 3.21.5),
                libgrilo-0.3-dev (>= 0.3.0),
                libgtk-3-dev (>= 3.22.0),
                libgtop2-dev,
-               libgudev-1.0-dev,
+               libgudev-1.0-dev ,
                libkrb5-dev,
-               libnm-dev (>= 1.2.0),
-               libnma-dev (>= 1.2.0),
-               libmm-glib-dev,
+               libnm-dev (>= 1.2.0) ,
+               libnma-dev (>= 1.2.0) ,
+               libmm-glib-dev ,
                libpolkit-gobject-1-dev (>= 0.103),
                libpulse-dev,
                libpwquality-dev,
                libsmbclient-dev (>= 2:3.6.12-1~),
                libupower-glib-dev (>= 0.99.0),
-               libwacom-dev (>= 0.7),
+               libwacom-dev (>= 0.7) ,
                libxi-dev (>= 2:1.2),
                libx11-dev,
                libxft-dev (>= 2.1.2),
@@ -64,7 +64,7 @@ Depends: ${misc:Depends},
          gnome-control-center-data (<< ${gnome:NextVersion}),
          gnome-control-center-data (>= ${source:Version}),
          gnome-desktop3-data,
-         gnome-settings-daemon (>= 3.19.1),
+         gnome-settings-daemon (>= 3.23.90),
          gsettings-desktop-schemas (>= 3.21.4),
 Recommends: cups-pk-helper,
             gnome-online-accounts,
