--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Maintainer: BlankOn Developers <blankon-dev@googlegroups.com>
 XSBC-Original-Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>, Laurent Bigonville <bigon@debian.org>, Michael Biebl <biebl@debian.org>
 Standards-Version: 4.1.0
-Build-Depends: debhelper (>= 10),
+Build-Depends: cdbs, debhelper (>= 10),
                dpkg-dev (>= 1.16.1~),
                libaccountsservice-dev (>= 0.6.39),
                desktop-file-utils,
